--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -49,7 +49,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="/"><i class="fa fa-picture-o text-yellow"></i>商品分类管理</a></li>
-            <li><a href="/productsList"><i class="fa fa-cogs text-yellow"></i>商品管理</a></li>
+            <li><a href="/products/list"><i class="fa fa-cogs text-yellow"></i>商品管理</a></li>
           </ul>
         </li>
         <li class="treeview">
