--- a/weMarketWeb/client/home/home.less
+++ b/weMarketWeb/client/home/home.less
@@ -1,6 +1,7 @@
 .home{
   // 快速导航
   .fast-nav{
+    background: #fff; overflow: hidden; _zoom: 1;
     li{
       float: left;
       list-style: none;
@@ -8,11 +9,24 @@
       height: 64px;
       text-align: center;
       padding: 10px 0;
-      i{ 
-        color: #fff; display: block; width: 40px; height: 40px; background: deepskyblue; border-radius: 8px;
-        margin: 4px auto; line-height: 40px; font-size: 22px;
+      img{ 
+        display: block; width: 40px; height: 40px;
+        margin: 4px auto; line-height: 40px;
       }
-      p{ color: #222; font-size: 12px; }
+      p{ color: #757575; font-size: 12px; }
     }
+  }
+}
+
+
+// 产品列表
+ul.product-list{
+  margin: 10px 4px;
+  .product-item{
+    float: left;width: 50%;box-sizing: border-box;padding: 2px;list-style: none; 
+    img{width: 100%; height: 160px; height: 50vw; object-fit: cover;background: #fff;margin: 0;vertical-align: bottom;}
+    .product-info{background: #fff; padding: 10px; margin: 0;}
+    .product-name{font-weight: normal;display: block;overflow: hidden;font-size: 1.5rem;color: #444;height: 3.8rem;line-height: 1.9rem;}
+    .product-price{font-size: 1.8rem;color: #1cbb7f;}
   }
 }
