从购物车中移除商品

--- a/weMarketWeb/client/shopping/shopping.less
+++ b/weMarketWeb/client/shopping/shopping.less
@@ -8,5 +8,6 @@
     img {float: left;width: 90px;height: 90px;border: 1px solid #ccc;margin-right: 10px;}
     h4 {height: 40px;line-height: 20px;font-size: 14px;overflow: hidden;}
     .price {font-size: 20px;color: #1cbb7f;margin-bottom: 35px;}
+    .remove-product {display: inline-block;float: right;height: 40px;width: 40px;line-height: 40px;font-size: 26px;text-align: center;color: #a9a7a7;}
   }
 }
