--- a/weMarketWeb/client/home/home.less
+++ b/weMarketWeb/client/home/home.less
@@ -26,7 +26,7 @@ ul.product-list{
     float: left;width: 50%;box-sizing: border-box;padding: 2px;list-style: none; 
     img{width: 100%; height: 160px; height: 50vw; object-fit: cover;background: #fff;margin: 0;vertical-align: bottom;}
     .product-info{background: #fff; padding: 10px; margin: 0;}
-    .product-name{font-weight: normal;display: block;overflow: hidden;font-size: 1.5rem;color: #444;height: 3.8rem;line-height: 1.9rem;}
-    .product-price{font-size: 1.8rem;color: #1cbb7f;}
+    .product-name{font-weight: normal;display: block;overflow: hidden;font-size: 14px;color: #444;height: 40px;line-height: 20px;}
+    .product-price{font-size: 18px;color: #1cbb7f;}
   }
 }
