--- a/weMarketWeb/client/layouts/footer.html
+++ b/weMarketWeb/client/layouts/footer.html
@@ -5,26 +5,26 @@
   }
   </style>
   <div class="weui-tabbar">
-    <a href="/" class="weui-tabbar__item {{isCurr 'home'}}">
+    <a href="/?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'home'}}">
       <!--<span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">8</span>-->
       <div class="weui-tabbar__icon">
         <i class="fa fa-home"></i>
       </div>
       <p class="weui-tabbar__label">首页</p>
     </a>
-    <a href="/categories" class="weui-tabbar__item {{isCurr 'categories'}}">
+    <a href="/categories/all?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'categories'}}">
       <div class="weui-tabbar__icon">
         <i class="fa fa-bars"></i>
       </div>
       <p class="weui-tabbar__label">分类</p>
     </a>
-    <a href="/shopping" class="weui-tabbar__item {{isCurr 'shopping'}}">
+    <a href="/shopping?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
       <div class="weui-tabbar__icon">
         <i class="fa fa-shopping-cart"></i>
       </div>
       <p class="weui-tabbar__label">购物车</p>
     </a>
-    <a href="/me" class="weui-tabbar__item {{isCurr 'me'}}">
+    <a href="/me?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'me'}}">
       <div class="weui-tabbar__icon">
         <i class="fa fa-user"></i>
       </div>
