--- a/weMarketWeb/client/layouts/headLayout.html
+++ b/weMarketWeb/client/layouts/headLayout.html
@@ -1,6 +1,6 @@
 <template name="headLayout">
 <div id="head">
-    <div class="left">返回</div>
+    {{> yield 'header'}}
 </div>
 <div id="container"  style="top: 40px; bottom: 0;">
     {{> yield}}
