--- a/weMarketWeb/client/categories/categories.less
+++ b/weMarketWeb/client/categories/categories.less
@@ -20,16 +20,15 @@
   height: 40px;
   line-height: 40px;
   color: #555;
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid #F6F6F9;
   text-align: center;
   cursor: pointer;
 }
 .sort-aside li.curr{
-  background: #efefef;
+  background: #F6F6F9;
   color: #1cbb7f;
 }
 .sort-main{
   margin-left: 80px;
-  background: #efefef;
   height: 100%;
 }
