--- a/weMarketWeb/client/search/search.less
+++ b/weMarketWeb/client/search/search.less
@@ -33,8 +33,9 @@
 
 .searchResult{
   ul.product-list{
+     margin: 0;
     .product-item{
-      width: 100%; padding: 10px; background: #fff; margin-bottom: 10px;
+      width: 100%; padding: 10px; background: #fff;border-bottom: 1px solid #efefef;
       img{ width: 90px; height: 90px; border: 1px solid #ccc; margin-right: 10px; float: left;}
       .product-info{padding: 0;}
     }
