--- a/weMarketWeb/client/categories/categories.less
+++ b/weMarketWeb/client/categories/categories.less
@@ -27,6 +27,7 @@
 .sort-aside li.curr{
   background: #F6F6F9;
   color: #1cbb7f;
+  border-left: 2px solid #1cbb7f;
 }
 .sort-main{
   margin-left: 80px;
