--- a/weMarketWeb/client/layouts/footer.html
+++ b/weMarketWeb/client/layouts/footer.html
@@ -1,7 +1,7 @@
 <template name="footer">
   <style>
   .weui-bar__item--on .weui-tabbar__label,.weui-bar__item--on i.fa{
-    color: deepskyblue !important;
+    color: #1cbb7f !important;
   }
   </style>
   <div class="weui-tabbar">
