--- a/weMarketWeb/client/layouts/headLayout.html
+++ b/weMarketWeb/client/layouts/headLayout.html
@@ -1,5 +1,5 @@
 <template name="headLayout">
-<div id="head">
+<div id="head" class="headLayoutHeader">
     {{> yield 'header'}}
 </div>
 <div id="container"  style="top: 40px; bottom: 0;">
