--- a/weMarketWeb/client/search/search.less
+++ b/weMarketWeb/client/search/search.less
@@ -1,5 +1,6 @@
-.searchHeader {height: 40px;overflow: hidden;position: relative;border-bottom: 1px solid #ccc;
-  .back {height: 40px;line-height: 40px;text-align: center;display: inline-block;width: 40px;font-size: 22px; cursor: pointer;}
+.searchHeader {
+  height: 40px;overflow: hidden;position: relative;border-bottom: 1px solid #ccc; background: #F6F6F9;
+  .back {height: 40px;line-height: 40px;text-align: center;display: inline-block;width: 40px;color: gray; cursor: pointer; padding: 0;}
   .search-box{height: 30px;line-height: 30px;position: absolute;left: 40px;right: 5px;background: #fff;top: 5px;border-radius: 4px;
     .search-input {border: none;outline: none;padding: 0 8px;width: 100%;box-sizing: border-box;}
   }
