--- a/weMarketWeb/client/me/me.less
+++ b/weMarketWeb/client/me/me.less
@@ -17,6 +17,7 @@
     width: 60px;
     overflow: hidden;
     margin: 16px;
+    margin-bottom: 32px;
     float: left;
     img {width: 100%;height: 100%;object-fit: cover;}
   }
