--- a/weMarketWeb/client/home/home.less
+++ b/weMarketWeb/client/home/home.less
@@ -1,7 +1,27 @@
 .home{
+  .swiper-container{
+    width:100%; height:160px;height:50vw;
+  }
+  .swiper-slide{
+    text-align:center;font-size:18px;background:#fff;display:-webkit-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;
+    img{width: 100%; height: 100%; object-fit: cover;}
+  }
+  .swiper-pagination-bullet{
+    width: 8px;
+    height: 4px;
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+    opacity: 1;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 0;
+  }
+  .swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background: #1cbb7f;
+  }
   // 快速导航
   .fast-nav{
-    background: #fff; overflow: hidden; _zoom: 1;
+    background: #fff; overflow: hidden; _zoom: 1; margin-top: 10px;
     li{
       float: left;
       list-style: none;
