update me account bg

--- a/weMarketWeb/client/me/me.less
+++ b/weMarketWeb/client/me/me.less
@@ -1,6 +1,6 @@
 .me{
   .userInfo {
-    background: url('/img/userBg.jpg'); background-size: 100%;background-position: center; overflow: hidden;
+    background: url('/img/userBg.png'); background-size: 100%;background-position: center; overflow: hidden;
     .userName {color: #fff;font-size: 20px;margin-top: 26px;}
     .userVip {color: #fff;font-size: 12px;}
     .userSetting {
@@ -23,20 +23,20 @@
   }
   .my-ul-title{
     background: #fff;overflow: hidden;height: 40px;line-height: 40px;padding: 0 10px; margin-top: 10px;
-    h4{float: left; color: #757575; font-weight: normal;}
+    h4{float: left; color: #757575; font-weight: 200;}
     span{float: right;color: #9E9E9E;}
     i.fa{font-size: 20px;width: 16px;line-height: 40px;vertical-align: bottom;}
   }
   .myWallet {
     margin: 0;color: #ccc;border-top: 1px solid #efefef;text-align: center; background: #fff; overflow: hidden;
     li{list-style: none;width: 50%;float: left;margin: 5px 0;box-sizing: border-box;}
-    h4{line-height: 30px;font-size: 18px;color: #757575; font-weight: normal;}
+    h4{line-height: 30px;font-size: 18px;color: #757575; font-weight: 200;}
     p{font-size: 12px;line-height: 24px;}
   }
   .myOrder{
     margin: 0;color: #ccc;border-top: 1px solid #efefef;text-align: center; background: #fff; overflow: hidden;
     li{list-style: none;width: 25%;float: left;margin: 5px 0;box-sizing: border-box;}
-    h4{line-height: 30px;font-size: 18px;color: #757575; font-weight: normal;}
+    h4{line-height: 30px;font-size: 18px;color: #757575; font-weight: 200;}
     p{font-size: 12px;line-height: 24px;}
   }
 }
