--- a/weMarketWeb/client/shopping/shopping.less
+++ b/weMarketWeb/client/shopping/shopping.less
@@ -11,3 +11,6 @@
     .remove-product {display: inline-block;float: right;height: 40px;width: 40px;line-height: 40px;font-size: 26px;text-align: center;color: #a9a7a7;}
   }
 }
+.shopping{
+  #createOrder{ background:  #1cbb7f; margin: 10px;}
+}
