订单页数据填充

--- a/weMarketWeb/client/orders/orders.less
+++ b/weMarketWeb/client/orders/orders.less
@@ -1,3 +1,41 @@
 .createOrder{
-  #createOrder{ background:  #1cbb7f; margin: 10px;}
+  #createOrder{
+    background: #1cbb7f;
+    margin: 16px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 16px;
+  }
+  ul.order-product-lists {
+    background: #fff;
+  }
+
+  ul.order-product-lists li {
+    border-bottom: 1px solid #efefef;
+    list-style: none;
+    padding: 10px;
+    overflow: hidden;
+  }
+
+  .product-name {
+    display: inline-block;
+    height: 40px;
+    line-height: 20px;
+    width: 50%;
+    overflow: hidden;
+    float: left;
+    color: #1cbb7f;
+  }
+
+  .product-num {
+    display: inline-block;
+    height: 40px;
+    margin: 0 10px;
+    float: left;
+  }
+
+  .product-price {
+    text-align: right;
+    font-size: 14px;
+  }
 }
