--- a/weMarketWeb/client/layouts/layout.less
+++ b/weMarketWeb/client/layouts/layout.less
@@ -19,6 +19,7 @@
   /*overflow: hidden;*/
 }
 .head-search {margin: 5px;background: #fff;height: 30px;line-height: 30px;border-radius: 4px;padding: 0 8px;}
+.head-search input,.head-search input:active,.head-search input:focus{border: none; outline: none;}
 #head{
   height: 40px;
   position: absolute;
