--- a/weMarketWeb/client/product/product.less
+++ b/weMarketWeb/client/product/product.less
@@ -22,14 +22,14 @@
     padding: 10px;
     margin: 10px 0;
     background: #fff;
-    .name{height:4rem; line-height: 2rem; overflow: hidden; font-size: 1.7rem; }
+    .name{height:40px; line-height: 20px; overflow: hidden; font-size: 18px; }
     .sale-price{
-      font-size: 2.1rem;
+      font-size: 18px;
       vertical-align: middle;
       color: #1cbb7f;
     }
     .unit-price,.other-info{
-      font-size: 1.6rem;
+      font-size: 14px;
       color: #888;
     }
     .other-info{display: -webkit-box;display: flex;}
@@ -38,16 +38,16 @@
   .weui-cells {margin-top: 10px;}
 
   .tab-title {
-    padding: 1.5rem 0;
+    padding: 10px 0;
     overflow: hidden;
     background: #fff;
     border-bottom: 1px solid #F3F4F9;
     margin-top: 10px;
     li{
-      height: 1.8rem;
-      line-height: 1.8rem;
+      height: 28px;
+      line-height: 28px;
       box-sizing: border-box;
-      font-size: 1.5rem;
+      font-size: 16px;
       float: left;
       width: 50%;
       list-style: none;
@@ -70,7 +70,7 @@
   right: 0;
   bottom: 0;
   box-sizing: border-box;
-  padding: .8rem;
+  padding: 10px;
   z-index: 6;
   background: #fafafc;
   border-top: 1px solid #efefef;
@@ -78,7 +78,7 @@
   overflow: hidden;
 }
 .filter-btn .filter-btn-a {
-  padding: 0 .4rem;
+  padding: 0 8px;
   display: block;
   text-align: center;
   position: relative;
@@ -87,7 +87,7 @@
   float: left;
 }
 .filter-btn .filter-btn-a i {
-  font-size: 2.2rem;
+  font-size: 20px;
   color: #777;
   display: block;
   color: #636363;
@@ -95,7 +95,7 @@
 }
 
 .filter-btn .button{
-  font-size: 1.5rem;
+  font-size: 14px;
   color: #fff;
   border: 0;
   text-align: center;
