--- a/weMarketWeb/client/product/product.less
+++ b/weMarketWeb/client/product/product.less
@@ -129,7 +129,7 @@
       font-weight: normal;
     }
     .close-popup{float: right; margin-top: 10px; cursor: pointer;}
-    .sale-price{font-size: 2.1rem;vertical-align: middle;color: #1cbb7f; padding-left: 10px; overflow: hidden;}
+    .sale-price{font-size: 20px;vertical-align: middle;color: #1cbb7f; padding-left: 10px; overflow: hidden;}
   }
 }
 
