--- a/weMarketWeb/client/orders/orders.less
+++ b/weMarketWeb/client/orders/orders.less
@@ -39,3 +39,41 @@
     font-size: 14px;
   }
 }
+
+.orders{
+  .orderLists{
+    
+  }
+  .orderItem{
+    list-style: none;
+    background: #fff;
+    margin: 0;
+    padding: 0 10px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    .header{
+      height: 40px; line-height: 40px; overflow: hidden;
+      .orderStatus{float: right; font-size: 14px; color: #1cbb7f;}
+    }
+    .body{
+      border-top: 1px solid #eee;
+      padding: 10px 0;
+      padding-right: 30px;
+      overflow: hidden;
+      .productImg{
+        width: 90px; height: 90px; border: 1px solid #efefef; float: left; margin-right:10px;
+        img{width: 100%; height: 100%; object-fit: cover;}
+      }
+      h4{ height: 40px; line-height: 20px; overflow: hidden; font-size: 14px;}
+      .totalPrice{font-size: 16px; color: #1cbb7f;}
+    }
+    .ft-rigtht{
+      width: 30px;
+      height: 90px;
+      line-height: 90px;
+      color: #ccc;
+      font-size: 26px;
+      float: right;
+    }
+  }
+}
