我的页面跳转 订单列表

--- a/weMarketWeb/client/orders/orders.less
+++ b/weMarketWeb/client/orders/orders.less
@@ -53,12 +53,11 @@
     overflow: hidden;
     .header{
       height: 40px; line-height: 40px; overflow: hidden;
+      border-bottom: 1px solid #eee;
       .orderStatus{float: right; font-size: 14px; color: #1cbb7f;}
     }
     .body{
-      border-top: 1px solid #eee;
       padding: 10px 0;
-      padding-right: 30px;
       overflow: hidden;
       .productImg{
         width: 90px; height: 90px; border: 1px solid #efefef; float: left; margin-right:10px;
