--- a/weMarketWeb/client/orders/orders.less
+++ b/weMarketWeb/client/orders/orders.less
@@ -1,10 +1,14 @@
 .createOrder{
+  font-weight: 400; font-size: 12px;
   #createOrder{
     background: #1cbb7f;
     margin: 16px;
     height: 40px;
     line-height: 40px;
     font-size: 16px;
+  }
+  .weui-panel__hd:after{
+    left: 0;
   }
   ul.order-product-lists {
     background: #fff;
@@ -37,6 +41,37 @@
   .product-price {
     text-align: right;
     font-size: 14px;
+  }
+  #user_addr{
+    padding: 10px 16px;
+    padding-right: 0;
+    background: #fff;
+    h4{ 
+      font-size: 16px; font-weight: 300;
+      span{display: inline-block; margin-left: 5px; font-size: 12px;} 
+    }
+    p{ font-weight: 300; color: #555; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+    .ft-right{float: right;line-height: 44px;font-size: 26px;width: 30px;color: gray;}
+  }
+  .selectAddrHead{
+    background: #fff; height: 40px; border-bottom: 1px solid #efefef; position: relative;
+    h4{ text-align: center; line-height: 40px; font-weight: 300;}
+    .selectAddrBtn {position: absolute;right: 0;top: 0;height: 40px;line-height: 40px;font-size: 14px;width: 64px;text-align: center; color: #1cbb7f; cursor: pointer;}
+  }
+  .selectAddr{
+    background: #fff;
+    .selectAddrItem{
+      margin: 0 16px;border-bottom:1px dashed #efefef; list-style: none; padding: 10px 0;
+      h4{ 
+        font-size: 16px; font-weight: 300;
+        span{display: inline-block; margin-left: 5px; font-size: 12px;} 
+      }
+      p{ font-weight: 300; color: #555; overflow: hidden; white-space: nowrap; text-overflow: ellipsis;}
+      .ft-right{float: right;line-height: 44px;font-size: 26px;width: 30px;color: gray;}
+    }
+    .selectAddrItem:last-child{
+      border: none;
+    }
   }
 }
 
