--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -10,6 +10,9 @@
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
+          <li id="getMarket">
+            <a href="#">店铺地址</a>
+          </li>
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle">
