Admin：添加默认用户头像

--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -16,7 +16,7 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle">
-              <img src="/img/personIcon.jpg" class="user-image" alt="User Image">
+              <img src="/userPicture.png" class="user-image" alt="User Image">
               <span class="hidden-xs">{{userInfo.username}}</span>
             </a>
           </li>
