商品图片修正

--- a/weMarketWeb/client/product/product.less
+++ b/weMarketWeb/client/product/product.less
@@ -59,7 +59,11 @@
   .tab-title li:last-of-type {
     border-right: 0;
   }
-
+  .product-content{
+    margin: 10px; margin-bottom: 80px;font-size: 14px; line-height: 20px;
+    *{ white-space: pre-wrap;}
+    img,tr{width: 100% !important; height: auto !important;}
+  }
 }
 
 .filter-btn {
