--- a/weMarketWeb/client/orders/orders.less
+++ b/weMarketWeb/client/orders/orders.less
@@ -7,6 +7,12 @@
     line-height: 40px;
     font-size: 16px;
   }
+  #cancelOrder{
+    margin: 16px;
+    height: 40px;
+    line-height: 40px;
+    font-size: 16px;
+  }
   .weui-panel__hd:after{
     left: 0;
   }
