--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -65,7 +65,7 @@
           </ul>
         </li>
         <li class="treeview">
-          <a href="/userLists">
+          <a href="/settings">
             <i class="fa fa-th"></i> <span>商城设置</span>
           </a>
         </li>
