admin: 订单管理（base）

--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -60,7 +60,7 @@
             <i class="fa fa-th"></i> <span>订单管理</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/studentIdentity"><i class="fa fa-circle-o text-yellow"></i>订单管理</a></li>
+            <li><a href="/orders/all?limit=20&page=1"><i class="fa fa-circle-o text-yellow"></i>订单管理</a></li>
             <li><a href="/certificatesLists"><i class="fa fa-circle-o text-yellow"></i>退换货管理</a></li>
           </ul>
         </li>
