--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -47,11 +47,16 @@
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="treeview">
+          <a href="/">
+            <i class="fa fa-home"></i> <span>主页</span>
+          </a>
+        </li>
+        <li class="treeview">
           <a href="#">
-            <i class="fa fa-home"></i> <span>商品管理</span>
+            <i class="fa fa-th"></i> <span>商品管理</span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="/"><i class="fa fa-picture-o text-yellow"></i>商品分类管理</a></li>
+            <li><a href="/categories"><i class="fa fa-picture-o text-yellow"></i>商品分类管理</a></li>
             <li><a href="/products/list/all"><i class="fa fa-cogs text-yellow"></i>商品管理</a></li>
           </ul>
         </li>
