--- a/weMarketWeb/client/product/product.less
+++ b/weMarketWeb/client/product/product.less
@@ -188,3 +188,25 @@
     top: 50%;
     margin-top: -10px;
 }
+
+// 普通用户下拉菜单
+.productDropdown{
+  position: fixed;
+  height: 56px;
+  left: 0;
+  right: 0;
+  top: 40px;
+  background: #1cbb7f;
+  color: #fff;
+  display: none;
+  li{
+    list-style: none;
+    float: left;
+    width: 25%;
+    height: 56px;
+    text-align: center;
+    cursor: pointer;
+    i{display: block; width: 100%; height: 30px; line-height: 30px; font-size: 22px;}
+    p{height: 20px; line-height: 20px; margin: 0; font-size: 14px;}
+  }
+}
