--- a/weMarketWeb/client/me/me.less
+++ b/weMarketWeb/client/me/me.less
@@ -27,7 +27,7 @@
     span{float: right;color: #9E9E9E;}
     i.fa{font-size: 20px;width: 16px;line-height: 40px;vertical-align: bottom;}
   }
-  .myWallet {
+  .myWallet ,.mySale{
     margin: 0;color: #ccc;border-top: 1px solid #efefef;text-align: center; background: #fff; overflow: hidden;
     li{list-style: none;width: 50%;float: left;margin: 5px 0;box-sizing: border-box;}
     h4{line-height: 30px;font-size: 18px;color: #757575; font-weight: 200;}
