商品加入到分销列表

--- a/weMarketWeb/client/home/home.less
+++ b/weMarketWeb/client/home/home.less
@@ -50,3 +50,10 @@ ul.product-list{
     .product-price{font-size: 18px;color: #1cbb7f;}
   }
 }
+
+#selectProducts {
+    background: #1cbb7f;
+    margin: 16px auto;
+    width: 50%;
+    cursor: pointer;
+}
