--- a/weMarketWeb/client/lib/02_ectouch/ectouch.css
+++ b/weMarketWeb/client/lib/02_ectouch/ectouch.css
@@ -14,10 +14,10 @@ html,body{
 }
 .index-title {
     color: #444;
-    font-size: 1.6rem;
+    font-size: 16px;
 }
 
 .index-small-title {
-    font-size: 1.3rem;
+    font-size: 12px;
     color: #888;
 }
