--- a/weMarketWeb/client/product/product.less
+++ b/weMarketWeb/client/product/product.less
@@ -210,3 +210,14 @@
     p{height: 20px; line-height: 20px; margin: 0; font-size: 14px;}
   }
 }
+
+#selectToSale{
+  cursor: pointer;
+  height: 40px;
+  margin: 0;
+  line-height: 40px;
+  text-align: center;
+  background: #1cbb7f;
+  color: #fff;
+  border-radius: 4px;
+}
