admin: hide unable menu

--- a/weMarketAdmin/client/layouts/layout.html
+++ b/weMarketAdmin/client/layouts/layout.html
@@ -66,7 +66,7 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="/orders/all?limit=20&page=1"><i class="fa fa-circle-o text-yellow"></i>订单管理</a></li>
-            <li><a href="/certificatesLists"><i class="fa fa-circle-o text-yellow"></i>退换货管理</a></li>
+            <!--<li><a href="/"><i class="fa fa-circle-o text-yellow"></i>退换货管理</a></li>-->
           </ul>
         </li>
         <li class="treeview">
