--- a/weMarketWeb/client/home/home.less
+++ b/weMarketWeb/client/home/home.less
@@ -47,7 +47,8 @@ ul.product-list{
     img{width: 100%; height: 160px; height: 50vw; object-fit: cover;background: #fff;margin: 0;vertical-align: bottom;}
     .product-info{background: #fff; padding: 10px; margin: 0;}
     .product-name{font-weight: normal;display: block;overflow: hidden;font-size: 14px;color: #444;height: 40px;line-height: 20px;}
-    .product-price{font-size: 18px;color: #1cbb7f;}
+    .product-price{font-size: 14px;color: #1cbb7f;}
+    .profit-price{font-size: 12px; color: orangered;}
   }
 }
 
