进一步完善权限

--- a/weMarketWeb/client/layouts/footer.html
+++ b/weMarketWeb/client/layouts/footer.html
@@ -19,12 +19,12 @@
       </div>
       <p class="weui-tabbar__label">分类</p>
     </a>
-    <a href="/shopping?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
+    <!--<a href="/shopping?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
       <div class="weui-tabbar__icon">
         <i class="fa fa-shopping-cart"></i>
       </div>
       <p class="weui-tabbar__label">购物车</p>
-    </a>
+    </a>-->
     <a href="/me?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'me'}}">
       <div class="weui-tabbar__icon">
         <i class="fa fa-user"></i>
