添加页面访问错误处理

--- a/weMarketWeb/client/layouts/layout.less
+++ b/weMarketWeb/client/layouts/layout.less
@@ -36,3 +36,12 @@
   .back{display: inline-block;position: absolute;left: 0;top: 0;width: 50px;font-size: 26px;padding-left: 14px;}
   .title{margin: 0 64px; font-size: 14px; text-align: center; overflow: hidden;}
 }
+
+.notFound{
+  margin-top: 80px;
+  text-align: center;
+  .back{
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
