--- a/weMarketWeb/client/layouts/notFound.html
+++ b/weMarketWeb/client/layouts/notFound.html
@@ -1,6 +1,6 @@
 <template name="notFound">
-<div class="weui-loadmore">
-  <i class="weui-loading"></i>
-  <span class="weui-loadmore__tips">暂无数据</span>
+<div class="notFound" style="margin-top: 80px; text-align: center;">
+ <h4>出错了</h4>
+ <div class="back">返回上一页</div>
 </div>
 </template>
