修复： 微信中，返回上一页无法点击的bug

--- a/weMarketWeb/client/layouts/layout.less
+++ b/weMarketWeb/client/layouts/layout.less
@@ -33,7 +33,7 @@
 
 .headLayoutHeader{
   background: #1cbb7f !important;color: #fff;line-height: 40px;
-  .back{display: inline-block;position: absolute;left: 0;top: 0;width: 50px;font-size: 26px;padding-left: 14px;}
+  .back{display: inline-block;position: absolute;left: 0;top: 0;width: 50px;font-size: 26px;padding-left: 14px; cursor: pointer;}
   .title{margin: 0 64px; font-size: 14px; text-align: center; overflow: hidden;}
 }
 
