--- a/weMarketWeb/client/lib/01_jqweui/css/weui.css
+++ b/weMarketWeb/client/lib/01_jqweui/css/weui.css
@@ -1781,9 +1781,9 @@ a.weui-media-box:active {
   z-index: 5000;
   width: 7.6em;
   min-height: 7.6em;
-  top: 180px;
+  /*top: 180px;*/
   left: 50%;
-  margin-left: -3.8em;
+  /*margin-left: -3.8em;*/
   background: rgba(17, 17, 17, 0.7);
   text-align: center;
   border-radius: 5px;
