--- a/weMarketWeb/client/layouts/footer.html
+++ b/weMarketWeb/client/layouts/footer.html
@@ -9,25 +9,31 @@
     <a href="/?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'home'}}">
       <!--<span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">8</span>-->
       <div class="weui-tabbar__icon">
-        <i class="fa fa-home"></i>
+        <i class="iconfont icon-shouye"></i>
       </div>
       <p class="weui-tabbar__label">首页</p>
     </a>
     <a href="/categories/all?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'categories'}}">
       <div class="weui-tabbar__icon">
-        <i class="fa fa-bars"></i>
+        <i class="iconfont icon-fenlei"></i>
       </div>
       <p class="weui-tabbar__label">分类</p>
     </a>
-    <!--<a href="/shopping?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
+    <a href="/myShop?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
       <div class="weui-tabbar__icon">
-        <i class="fa fa-shopping-cart"></i>
+        <i class="iconfont icon-store"></i>
+      </div>
+      <p class="weui-tabbar__label">我的店铺</p>
+    </a>
+    <a href="/shopping?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
+      <div class="weui-tabbar__icon">
+        <i class="iconfont icon-gouwuche"></i>
       </div>
       <p class="weui-tabbar__label">购物车</p>
-    </a>-->
+    </a>
     <a href="/me?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'me'}}">
       <div class="weui-tabbar__icon">
-        <i class="fa fa-user"></i>
+        <i class="iconfont icon-wo"></i>
       </div>
       <p class="weui-tabbar__label">我</p>
     </a>
@@ -37,19 +43,25 @@
     <a href="/shareProduct/{{shareProductId}}?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'home'}}">
       <!--<span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">8</span>-->
       <div class="weui-tabbar__icon">
-        <i class="fa fa-home"></i>
+        <i class="iconfont icon-shouye"></i>
       </div>
       <p class="weui-tabbar__label">首页</p>
     </a>
+    <a href="/categories/all?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'categories'}}">
+      <div class="weui-tabbar__icon">
+        <i class="iconfont icon-fenlei"></i>
+      </div>
+      <p class="weui-tabbar__label">分类</p>
+    </a>
     <a href="/shopping?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
       <div class="weui-tabbar__icon">
-        <i class="fa fa-shopping-cart"></i>
+        <i class="iconfont icon-gouwuche"></i>
       </div>
       <p class="weui-tabbar__label">购物车</p>
     </a>
     <a href="/me?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'me'}}">
       <div class="weui-tabbar__icon">
-        <i class="fa fa-user"></i>
+        <i class="iconfont icon-wo"></i>
       </div>
       <p class="weui-tabbar__label">我</p>
     </a>
