--- a/weMarketWeb/client/layouts/layout.less
+++ b/weMarketWeb/client/layouts/layout.less
@@ -18,6 +18,9 @@
   box-shadow: -1px -1px 6px rgba(0, 0, 0, 0.26);
   /*overflow: hidden;*/
 }
+#footer .weui-bar__item--on .iconfont{
+  color: #1cbb7f;
+}
 .head-search {margin: 5px;background: #fff;height: 30px;line-height: 30px;border-radius: 4px;padding: 0 8px;}
 .head-search input,.head-search input:active,.head-search input:focus{border: none; outline: none;}
 #head{
