change home page

--- a/weMarketWeb/client/home/home.less
+++ b/weMarketWeb/client/home/home.less
@@ -48,6 +48,7 @@ ul.product-list{
     .product-info{background: #fff; padding: 10px; margin: 0;}
     .product-name{font-weight: normal;display: block;overflow: hidden;font-size: 14px;color: #444;height: 40px;line-height: 20px;}
     .product-price{font-size: 14px;color: #1cbb7f;}
+    .unit_price{font-size: 12px; color: #888;}
     .profit-price{font-size: 12px; color: orangered;}
   }
 }
