--- a/weMarketWeb/client/layouts/footer.html
+++ b/weMarketWeb/client/layouts/footer.html
@@ -19,7 +19,7 @@
       </div>
       <p class="weui-tabbar__label">分类</p>
     </a>
-    <a href="/myShop?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'shopping'}}">
+    <a href="/shop/{{userId}}" class="weui-tabbar__item {{isCurr 'myShop'}}">
       <div class="weui-tabbar__icon">
         <i class="iconfont icon-store"></i>
       </div>
@@ -40,7 +40,7 @@
   </div>
   {{else}}
   <div class="weui-tabbar">
-    <a href="/shareProduct/{{shareProductId}}?s={{seller_id}}" class="weui-tabbar__item {{isCurr 'home'}}">
+    <a href="/shop/{{seller_id}}" class="weui-tabbar__item {{isCurr 'home'}}">
       <!--<span class="weui-badge" style="position: absolute;top: -.4em;right: 1em;">8</span>-->
       <div class="weui-tabbar__icon">
         <i class="iconfont icon-shouye"></i>
