--- a/weMarketWeb/client/layouts/layout.less
+++ b/weMarketWeb/client/layouts/layout.less
@@ -37,7 +37,7 @@
 .headLayoutHeader{
   background: #1cbb7f !important;color: #fff;line-height: 40px;
   .back{display: inline-block;position: absolute;left: 0;top: 0;width: 50px;font-size: 26px;padding-left: 14px; cursor: pointer;}
-  .title{margin: 0 64px; font-size: 14px; text-align: center; overflow: hidden;}
+  .title{margin: 0 50px; font-size: 14px; text-align: center; overflow: hidden;height: 40px; text-overflow: ellipsis; white-space: nowrap;}
 }
 
 .notFound{
