--- a/weMarketWeb/client/layouts/footer.html
+++ b/weMarketWeb/client/layouts/footer.html
@@ -19,7 +19,7 @@
       </div>
       <p class="weui-tabbar__label">分类</p>
     </a>
-    <a href="/shop/{{userId}}" class="weui-tabbar__item {{isCurr 'myShop'}}">
+    <a href="/myShop/{{userId}}" class="weui-tabbar__item {{isCurr 'myShop'}}">
       <div class="weui-tabbar__icon">
         <i class="iconfont icon-store"></i>
       </div>
