--- a/weMarketWeb/client/shops/addCategories.less
+++ b/weMarketWeb/client/shops/addCategories.less
@@ -16,12 +16,14 @@
     li:nth-child(2n){padding-right: 10px;}
     li.selected .categorieInfo{background: #1cbb7f; color: #fff;}
     .categorieInfo{
-      height: 64px;
       background: #e8e8e8;
       border-radius: 4px;
       padding: 16px;
       box-sizing: border-box;
       h4{font-size: 16px;}
+      .profit{
+        font-size: 12px;
+      }
     }
 
   }
